# rofinetworkadvanced

./: Cargo.toml  PLAN.md  README.md  flake.nix  rqlens.toml
docs/: nmcli-parity.md
src/: actions.rs  app.rs  cache.rs  cli.rs  connect.rs  contract.rs  diagnose.rs  list.rs  logging.rs  main.rs  model.rs  nm.rs  output.rs  rofi.rs  stream.rs
src/nm/: devices.rs
tools/: connect-parity-probe.sh
